...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63"
        app:srcCompat="@drawable/textbox" />

    <EditText
        android:id="@+id/gpNameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Name of your GP"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textBox"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintStart_toStartOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="@+id/textBox" />

    <EditText
        android:id="@+id/gpNumberField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="GP Contact Phone"
        android:inputType="phone"
...
