...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        app:srcCompat="@drawable/textbox" />

    <EditText
        android:id="@+id/emergencyNameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Emergency Contact Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textBox"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintStart_toStartOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="@+id/textBox" />

    <EditText
        android:id="@+id/emergencyNumberField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Emergency Contact Phone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/textBox2"
...
