...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dateOfBirthField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Date of Birth (dd/mm/yyyy)"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/textBox"
...
